# mold

./: HOW_IT_WORKS.md  MOLD_Issue_000.1.html  NOTICE  README.md  pyproject.toml
docs/bench/: bench-000-fma-manifest.json  bench-000-fma-report.md  bench-000-fma-results.json
mold/: __init__.py  config.py  grounded.py  handoff.py  ledger_cd.py  perception_web.py  pick.py  pipeline.py  prose.py  publish.py  reskin.py  run_issue.py  slice.py  survey.py  taste.py  verify.py  voices.py
mold/design/: __init__.py  artdirector.py  brief.py  constraints.py  palette.py  primitives.py
mold/perception/: __init__.py  bench.py  embedder.py
mold/personas/: __init__.py  base.py  critic.py  editor.py  planner.py  surveyor.py
mold/templates/: README.md  archive.html  moldhome.html
ops/: README.md  heal.sh  healthcheck.sh  install.sh  mold.env.example  run-issue.sh  run-ledger.sh
ops/systemd/: mold-heal@.service  mold-health.service  mold-health.timer  mold-issue.service  mold-issue.timer  mold-ledger.service  mold-ledger.timer
tests/: test_bench.py  test_prose.py  test_robustness.py  test_slice.py  test_taste.py  test_verify.py
