[project]
name = "mold"
version = "0.0.1"
description = "An autonomous web zine about AI culture; the first instance of ensemble."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [{ name = "Gabe Lev" }]
dependencies = ["ensemble"]

[project.optional-dependencies]
dev = ["pytest>=8"]
# The listening apparatus (MERT/CLAP + MIR). Heavy; only needed on the GPU box.
listen = ["torch", "transformers", "librosa", "soundfile", "nnAudio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mold"]

# During bootstrap, mold consumes ensemble as an editable local path dependency.
# Swap to a git ref / published version once ensemble stabilizes.
[tool.uv.sources]
ensemble = { path = "../ensemble", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
